--- a/cards.html
+++ b/cards.html
@@ -54,7 +54,7 @@
         text: "Quieres verlas?",
         icon: 'warning',
         color: '#fff',
-        showCancelButton: true,
+        showCancelButton: false,
         confirmButtonColor: '#019C0F',
         cancelButtonColor: '#d33',
         cancelButtonText: 'No quiero',
