--- a/cards.html
+++ b/cards.html
@@ -24,21 +24,21 @@
                 <img src="fts/dia1.jpeg" alt="Imagen 1">
                 <p>El dia 1</p>
             </div>
-            <div class="card ct">
+            <div class="card ct" onclick="goToPage('dia2')">
+                <img src="fts/beso.jpeg" alt="">
+                <p>Nuestros primeros besos</p>
+            </div>
+            <div class="card cb">
                 <img src="" alt="">
                 <p>Se desbloqueara en 1 dia!</p>
             </div>
-            <div class="card cb">
+            <div class="card ct">
                 <img src="" alt="">
                 <p>Se desbloqueara en 2 dias!</p>
             </div>
-            <div class="card ct">
-                <img src="" alt="">
-                <p>Se desbloqueara en 3 dias!</p>
-            </div>
             <div class="card cb">
                 <img src="" alt="">
-                <p>Se desbloqueara en 4 dias!</p>
+                <p>Se desbloqueara en 3 dias!</p>
             </div>
         </div>
     </section>
