--- a/cards.html
+++ b/cards.html
@@ -28,9 +28,9 @@
                 <img src="fts/beso.jpeg" alt="">
                 <p>Nuestros primeros besos</p>
             </div>
-            <div class="card cb">
-                <img src="" alt="">
-                <p>Se desbloqueara en 1 dia!</p>
+            <div class="card cb" onclick="goToPage('dia3')>
+                <img src="fts/junt.jpeg" alt="">
+                <p>55+1 Razones por las que te quiero/amo.</p>
             </div>
             <div class="card ct">
                 <img src="" alt="">
