--- a/cards.html
+++ b/cards.html
@@ -34,11 +34,11 @@
             </div>
             <div class="card ct">
                 <img src="" alt="">
-                <p>Se desbloqueara en 2 dias!</p>
+                <p>Se desbloqueara en 1 dia!</p>
             </div>
             <div class="card cb">
                 <img src="" alt="">
-                <p>Se desbloqueara en 3 dias!</p>
+                <p>Se desbloqueara en 2 dias!</p>
             </div>
         </div>
     </section>
