--- a/cards.html
+++ b/cards.html
@@ -28,7 +28,7 @@
                 <img src="fts/beso.jpeg" alt="">
                 <p>Nuestros primeros besos</p>
             </div>
-            <div class="card cb" onclick="goToPage('dia3')>
+            <div class="card cb" onclick="goToPage('dia3')">
                 <img src="fts/junt.jpeg" alt="">
                 <p>55+1 Razones por las que te quiero/amo.</p>
             </div>
