--- a/cards.html
+++ b/cards.html
@@ -30,7 +30,7 @@
             </div>
             <div class="card cb" onclick="goToPage('dia3')">
                 <img src="fts/junt.jpeg" alt="">
-                <p>55+1 Razones por las que te quiero/amo.</p>
+                <p>55+1 Razones  las que te quiero/amo.</p>
             </div>
             <div class="card ct">
                 <img src="" alt="">
