--- a/dia3.html
+++ b/dia3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NUESTRO PRIMER BESO</title>
+    <title>55+1 Razones por las que te quiero.</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style3.css" />
     <!-- ICONO -->
