--- a/cards.html
+++ b/cards.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,13 +33,13 @@
                 <img src="fts/junt.jpeg" alt="">
                 <p>55+1 Razones por las que te quiero/amo.</p>
             </div>
-            <div class="card ct">
-                <img src="" alt="">
-                <p>Se desbloqueara en 1 dia!</p>
+            <div class="card ct" onclick="goToPage('dia4')">
+                <img src="fts/feliz.jpeg" alt="">
+                <p>El dia mas feliz de tito!</p>
             </div>
             <div class="card cb">
                 <img src="" alt="">
-                <p>Se desbloqueara en 2 dias!</p>
+                <p>Se desbloqueara en 1 dia!</p>
             </div>
         </div>
     </section>
