--- a/cards.html
+++ b/cards.html
@@ -38,8 +38,8 @@
                 <p>El dia mas feliz de tito!</p>
             </div>
             <div class="card cb">
-                <img src="" alt="">
-                <p>Se desbloqueara en 1 dia!</p>
+                <img src="fts/princesa.jpeg" alt="">
+                <p>Por que eres tu?</p>
             </div>
         </div>
     </section>
