--- a/cards.html
+++ b/cards.html
@@ -37,7 +37,7 @@
                 <img src="fts/feliz.jpeg" alt="">
                 <p>El dia mas feliz de tito!</p>
             </div>
-            <div class="card cb">
+            <div class="card cb" onclick="goToPage('dia5')">
                 <img src="fts/princesa.jpeg" alt="">
                 <p>Por que eres tu?</p>
             </div>
